# LAT-Repo

./: .gitignore  2017_01_10440-01-02-2_臺中市特殊教育學校教育經費概況(預、決算數).csv  2018_01_10440-01-02-2_臺中市特殊教育學校教育經費概況(預、決算數).csv  README.md  main.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
hw1/: hw1-part2.ipynb  hw1.ipynb
hw3/: 01.txt  02.txt  03.txt  main.ipynb
hw4/: README.md  index.js
hw4/.azure/: config
hw5/: README.md  index.html  key.js  main.js
